--- a/requirements_3.txt
+++ b/requirements_3.txt
@@ -1,8 +1,5 @@
 # PyTorch with CUDA support
---index-url https://download.pytorch.org/whl/cu130
-torch
-torchvision
-torchaudio
+torch torchvision --index-url https://download.pytorch.org/whl/cu130
 
 # ML & DL
 huggingface_hub
@@ -59,9 +56,9 @@ mediapy
 seaborn
 
 # Chapter 1 (interp)
-transformer_lens==2.11.0
+transformer_lens<3.0.0 #was 2.11.0
 sae-lens==6.30.0
-sae-vis==0.3.6
+#sae-vis==0.3.6
 git+https://github.com/callummcdougall/CircuitsVis.git#subdirectory=python
 git+https://github.com/neelnanda-io/neel-plotly
 
